refactor: remove pgvector/RLS from Java source, switch to MySQL
- MybatisPlusConfig: DbType.POSTGRE_SQL → DbType.MYSQL
- UserInterceptor: remove PostgreSQL RLS set_app_user call
- StrategyEntity: remove embedding field (migrated to Milvus)
- StrategyRepository: remove pgvector searchSimilar method
- StrategyServiceImpl: remove vector search, use fallback only
- CallbackServiceImpl: remove EmbeddingService async generation
- All 7 sub-module pom.xml: postgresql → mysql-connector-j
- application.yml: jdbc:postgresql → jdbc:mysql with MySQL params

Co-Authored-By: Claude Sonnet 4.6 (1M context) <noreply@anthropic.com>